<resources>
    <string name="app_name">Battleship</string>

    //Button
    <string name="button_end">End</string>
    <string name="loginBtn">Login</string>
    <string name="registerBtn">Register</string>
    <string name="offlineGameBtn">Offline Game</string>
    <string name="onlineGameBtn">Online Game</string>
    <string name="okBtn">OK</string>
    <string name="autoBtn">Auto</string>
    <string name="pcBtn">PC</string>
    <string name="twoPlayerBtn">2 Player</string>
    <string name="startBtn">Start</string>
    <string name="backBtn">Back</string>

    //Textfield
    <string name="usernameTxtField">Username</string>
    <string name="passwordTxtField">Password</string>
    <string name="playerOneTxtField">Player One</string>
    <string name="playerTwoTxtField">Player Two</string>
    <string name="set_up_title">Please set up your map</string>
    <string name="offlineMenuHeader">Select play mode</string>
    <string name="OfflineLoginHeader">Type in your names</string>
    <string name="wins_txt">WINS :</string>
    <string name="loses_txt">LOSES :</string>
    <string name="waiting">Waiting...</string>

    //Alerts
    <string name="invalidUsernameLength">The username can\'t be empty or smaller than 4 symbols!</string>
    <string name="usernameAlreadyUsed">This username has already been used!</string>
    <string name="invalidPasswordLength">The password can\'t be empty or smaller than 4 symbols!</string>
    <string name="missMatchOfPassword">The two passwords don\'t match!</string>
    <string name="loginFailed">Your username or password might be wrong!</string>
</resources>
